routing to home and articles + retrieving articles from NestJS

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,1 +1,7 @@
 <p>articles works!</p>
+
+<div *ngIf="articles$">
+  <ul>
+    <li *ngFor="let article of articles$ | async">{{article.title}}</li>
+  </ul>
+</div>
