--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,38 @@
-<router-outlet></router-outlet>
+<header>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">Fixed navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+      aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a [routerLink]="['']" class="nav-link">Homeeeeeee</a>
+        </li>
+        <li class="nav-item active">
+          <a [routerLink]="['articles']" class="nav-link">Articlessss</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline mt-2 mt-md-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+</header>
+<main role="main" class="container">
+  <router-outlet></router-outlet>
+</main>
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">Place sticky footer content hereeee.</span>
+  </div>
+</footer>
