--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
 </header>
-<main role="main" class="container">
+<main role="main" class="container pt-5">
   <router-outlet></router-outlet>
 </main>
 <footer class="footer">
