just cleaning some typos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a [routerLink]="['']" class="nav-link">Homeeeeeee</a>
+          <a [routerLink]="['']" class="nav-link">Home</a>
         </li>
         <li class="nav-item active">
-          <a [routerLink]="['articles']" class="nav-link">Articlessss</a>
+          <a [routerLink]="['articles']" class="nav-link">Articles</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -33,6 +33,6 @@
 </main>
 <footer class="footer">
   <div class="container">
-    <span class="text-muted">Place sticky footer content hereeee.</span>
+    <span class="text-muted">Place sticky footer content here.</span>
   </div>
 </footer>
