--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
         <li class="nav-item active">
           <a [routerLink]="['articles']" class="nav-link">Articles</a>
         </li>
+        <li class="nav-item active">
+          <a [routerLink]="['admin/article-new']" class="nav-link">Create article</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
