--- a/src/app/admin/article-new/article-new.component.html
+++ b/src/app/admin/article-new/article-new.component.html
@@ -2,26 +2,26 @@
 <form [formGroup]="articleForm" (ngSubmit)="submit()">
   <div class="form-group">
     <label for="exampleFormControlInput1">Article title</label>
-    <input type="text" formControlName="articleTitle" class="form-control" id="articleTitle" required
+    <input type="text" formControlName="title" class="form-control" id="title" required
       placeholder="article title">
     <div
-      *ngIf="articleTitle.invalid && (articleTitle.dirty || articleTitle.touched)"
+      *ngIf="title.invalid && (title.dirty || title.touched)"
       class="alert alert-danger">
       Article title is required.
     </div>
   </div>
   <div class="form-group">
-    <label for="articleContent">Article content</label>
-    <textarea formControlName="articleContent" class="form-control" id="articleContent" rows="3" required>
+    <label for="content">Article content</label>
+    <textarea formControlName="content" class="form-control" id="content" rows="3" required>
     </textarea>
     <div
-      *ngIf="articleContent.errors && (articleContent?.errors['required'] !== null) && (articleContent.dirty || articleContent.touched)"
+      *ngIf="content.errors && (content?.errors['required'] !== null) && (content.dirty || content.touched)"
       class="alert alert-danger">
       Article content is required.
     </div>
     <div
-      *ngIf="articleContent.errors && articleContent?.errors['minlength'] && (articleContent.dirty ||
-      articleContent.touched)"
+      *ngIf="content.errors && content?.errors['minlength'] && (content.dirty ||
+      content.touched)"
       class="alert alert-danger">
       Article content is too short (min 4 caracters).
     </div>
@@ -31,3 +31,6 @@
   </div>
 </form>
 
+<div *ngIf="(response$ | async) as res">
+  {{res | json}}
+</div>
