deleting an article

--- a/src/app/articles/article-summary/article-summary.component.html
+++ b/src/app/articles/article-summary/article-summary.component.html
@@ -6,6 +6,9 @@
       <div class="mb-1 text-muted">{{article.creationDate}}</div>
       <p class="card-text mb-auto">{{article.content}}</p>
       <a href="#" class="stretched-link">Continue reading</a>
+      <button class="stretched-link btn btn-danger" (click)="delete(article)">Delete article</button>
+      <span *ngIf="isWaitingForServerResponse">please wait...</span>
+      <div *ngIf="error">{{error | json}}</div>
     </div>
   </div>
 </div>
