updating an article (edit in place way)

--- a/src/app/articles/article-summary/article-summary.component.html
+++ b/src/app/articles/article-summary/article-summary.component.html
@@ -1,14 +1,20 @@
-<div class="col-md-12">
-  <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+<div class="col-md-12" >
+  <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" [hidden]="isInEditMode">
     <div class="col p-4 d-flex flex-column position-static">
       <strong class="d-inline-block mb-2 text-primary">todo tags</strong>
       <h3 class="mb-0">{{article.title}}</h3>
       <div class="mb-1 text-muted">{{article.creationDate}}</div>
       <p class="card-text mb-auto">{{article.content}}</p>
       <a href="#" class="stretched-link">Continue reading</a>
+      <button class="stretched-link btn btn-warning" (click)="isInEditMode = !isInEditMode">Update article</button>
       <button class="stretched-link btn btn-danger" (click)="delete(article)">Delete article</button>
       <span *ngIf="isWaitingForServerResponse">please wait...</span>
       <div *ngIf="error">{{error | json}}</div>
     </div>
+  </div>
+  <div class="row no-gutters border rounded overflow-hidden flex-md-column mb-4 shadow-sm h-md-250 position-relative"
+    [hidden]="!isInEditMode">
+    <app-article-edit [article]="article"></app-article-edit>
+    <button class="stretched-link btn btn-primary" (click)="isInEditMode = !isInEditMode">back to read mode</button>
   </div>
 </div>
