--- a/src/app/articles/article-summary/article-summary.component.html
+++ b/src/app/articles/article-summary/article-summary.component.html
@@ -6,7 +6,7 @@
       <div class="mb-1 text-muted">{{article.creationDate}}</div>
       <p class="card-text mb-auto">{{article.content}}</p>
       <a href="#" class="stretched-link">Continue reading</a>
-      <button class="stretched-link btn btn-warning" (click)="isInEditMode = !isInEditMode">Update article</button>
+      <button class="stretched-link btn btn-warning" (click)="toggleReadMode()">Update article</button>
       <button class="stretched-link btn btn-danger" (click)="delete(article)">Delete article</button>
       <span *ngIf="isWaitingForServerResponse">please wait...</span>
       <div *ngIf="error">{{error | json}}</div>
@@ -14,7 +14,7 @@
   </div>
   <div class="row no-gutters border rounded overflow-hidden flex-md-column mb-4 shadow-sm h-md-250 position-relative"
     [hidden]="!isInEditMode">
-    <app-article-edit [article]="article"></app-article-edit>
-    <button class="stretched-link btn btn-primary" (click)="isInEditMode = !isInEditMode">back to read mode</button>
+    <app-article-edit [article]="article" (articleUpdate)="reloadArticle($event)"></app-article-edit>
+    <button class="stretched-link btn btn-primary" (click)="toggleReadMode()">back to read mode</button>
   </div>
 </div>
