--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -29,6 +29,7 @@
             [disabled]="loginForm.pristine || !this.loginForm.valid">login</button>
         </div>
       </form>
+      is user admin: {{ authService.isAdmin }}
     </div>
   </div>
 </div>
